# nekocord

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
dumps/: format.js
dumps/bot/: CHANNEL_CREATE.txt  CHANNEL_UPDATE.txt  GUILD_CREATE.txt  GUILD_UPDATE.txt  MESSAGE_CREATE.txt  MESSAGE_CREATE2.txt
dumps/user/: MESSAGE_ACK.txt  MESSAGE_CREATE.txt  MESSAGE_DELETE.txt  MESSAGE_REACTION_ADD.txt  MESSAGE_REACTION_REMOVE.txt  MESSAGE_REACTION_REMOVE_ALL.txt  MESSAGE_UPDATE.txt  PRESENCE_UPDATE.txt  READY.txt  SESSIONS_REPLACE.txt  TYPING_START.txt  VOICE_STATE_UPDATE.txt
example/: main.cpp
include/neko/discord/: channel.hpp  client.hpp  message.hpp  nekocord.hpp  presence.hpp  snowflake.hpp  user.hpp
include/neko/discord/api/: http.hpp  rest.hpp  shard.hpp  websocket.hpp
include/neko/discord/guild/: channel.hpp  emoji.hpp  guild.hpp  member.hpp  role.hpp
include/neko/discord/web/: http.hpp  ratelimit.hpp  websocket.hpp
src/: channel.cpp  client.cpp  message.cpp  presence.cpp  user.cpp
src/api/: http.cpp  ratelimit.cpp  rest.cpp  shard.cpp  websocket.cpp
src/guild/: channel.cpp  emoji.cpp  guild.cpp  member.cpp  role.cpp
src/web/: http.cpp  ratelimit.cpp  websocket.cpp
